<resources>
    <string name="app_name">UoR Campus Assistant</string>
    <!-- Main Menu Activity Strings -->
    <string name="mainStudentInfoBtnText">Student Information</string>
    <string name="mainLatestNewsBtnText">Latest News</string>
    <string name="mainCampusNavBtnText">Campus Navigation</string>
    <string name="mainTravelInfoBtnText">Travel Information</string>
    <string name="mainBbEmailBtnText">Blackboard &amp; Email</string>
    <string name="mainTimetableBtnText">Timetable</string>
    <!-- Student Information Menu Activity Strings -->
    <string name="studentInfoMenuTitle">Student Information</string>
    <string name="studentInfoServicesBtnText">Student Services</string>
    <string name="studentInfoLibraryBtnText">Library</string>
    <string name="studentInfoPaymentsBtnText">Payments</string>
    <string name="studentInfoRisisBtnText">RISIS</string>
    <string name="studentInfoStaffDirectoryBtnText">Staff Search</string>
    <!-- Campus Navigation Menu Activity Strings -->
    <string name="campusNavMenuTitle">Campus Navigation</string>
    <string name="campusNavInteractiveMapBtnText">Interactive Map</string>
    <string name="campusNavMapsBtnText">Campus Maps</string>
...
    <string name="routeTxtViewText">Route</string>
    <string name="destinationTxtViewText">Journey Destination</string>
    <string name="arrivalTxtViewText">Time</string>

    <string name="todayBtnText">Today</string>
    <string name="mapSearchHintText">Search here</string>
    <string name="mapSearchBtnText">Search</string>
    <string name="distanceTxtViewText">[distance]</string>
    <string name="timeTxtViewText">[time]</string>
    <string name="englandMapBounds">55.811741, 1.76896, 49.871159, -6.37988</string>
    <string name="uniUsernameTextView">University Username:</string>
    <string name="uniPasswordTextView">University Password:</string>
    <string name="loginBtnText">Log in</string>
...
        <item>Timetable</item>
    </string-array>

    <string-array name="studentInfoItems">
        <item>Student Services</item>
        <item>Library</item>
        <item>University Payments</item>
        <item>RISIS</item>
        <item>Staff Search</item>
    </string-array>

    <string-array name="latestNewsItems">
        <item>Latest Tweets</item>
...
