...
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <Button
                    android:text="@string/studentInfoPaymentsBtnText"
                    android:id="@+id/studentInfoPaymentsBtn"
                    android:layout_weight="1"
                    android:layout_width="90dp"
                    android:background="@color/StudentInfoColor"
                    android:textSize="12sp"
                    android:layout_marginRight="2.5dp"
                    android:textColor="@color/TextWhite"
...
