...
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.andrewwilloughby.campus_assistant.MapsActivity" />

    <LinearLayout
...
    android:layout_margin="5dp"

    android:orientation="horizontal"
        android:background="@color/TextWhite">

    <EditText
        android:id="@+id/searchBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:hint="@string/mapSearchHintText"
        android:textColorLink="@color/CampusNavigationColor" />


    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:onClick="onMapSearch"
        android:text="@string/mapSearchBtnText"
        android:background="@color/CampusNavigationColor"
        android:textAllCaps="false"
        android:textColor="@color/TextWhite" />

    </LinearLayout>

...
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/searchNearbyItems">

            <TextView
                android:text="@string/search_nearby_textView_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchNearbyTextView"
                android:textSize="18sp"
                android:layout_marginLeft="8dp" />

            <Spinner
                android:layout_height="40dp"
                android:id="@+id/searchNearbySpinner"
                android:layout_width="wrap_content"
                android:prompt="@string/search_nearby_prompt"
                android:entries="@array/search_nearby_items"
                android:background="@color/CampusNavigationColor"
                android:layout_marginLeft="8dp"
                android:spinnerMode="dialog" />
...
